src/main/java/de/dfki/lt/tr/dialogue/cplan/RuleParser.output
Grammar

    0 $accept: start $end

    1 start: rules

    2 rules: rulegroup rules
    3      | rulegroup

    4 rulegroup: rule '.'
    5          | expr '{' groups '}'

    6 groups: '|' group groups
    7       | '^' group groups
    8       | '|' group
    9       | '^' group

   10 group: rule '.'
   11      | expr '{' groups '}'

   12 rule: expr ARROW actions
   13     | error

   14 expr: expr '|' eterm
   15     | eterm

   16 eterm: eterm '^' term
   17      | term

   18 term: '<' id_lvar '>' term
   19     | '<' id_lvar '>'
   20     | '(' GVAR '~' expr ')'
   21     | '(' funcall '~' expr ')'
   22     | feature

   23 feature: nominal
   24        | nominal iv_term
   25        | ':' iv_term
   26        | id_lvar
   27        | STRING
   28        | '!' term
   29        | '(' expr ')'
   30        | '=' nominal

   31 nominal: ID ':'
   32        | VAR ':'
   33        | GVAR ':'

   34 id_lvar: VAR
   35        | ID

   36 iv_term: id_lvar
   37        | '!' iv_term
   38        | '(' iv_expr ')'

   39 iv_expr: iv_term
   40        | iv_term '|' iv_expr

   41 funcall: ID '(' rargs ')'
   42        | ID '(' ')'

   43 actions: action
   44        | action ',' actions

   45 action: lval '=' rexpr
   46       | lval '^' rexpr
   47       | lval '!' '<' ID '>'

   48 lval: VAR
   49     | RVAR
   50     | '#'
   51     | GVAR path

   52 path: '<' ID '>' path
   53     | /* empty */

   54 rexpr: rexpr '^' rterm
   55      | rterm

   56 rterm: '<' ID '>' rterm
   57      | rfeat

   58 rfeat: rnominal
   59      | rnominal r_id_var
   60      | ':' r_id_var
   61      | r_id_var
   62      | STRING
   63      | '(' rexpr ')'

   64 rnominal: r_id_var ':'

   65 rargs: rarg ',' rargs
   66      | rarg

   67 rarg: r_id_var
   68     | STRING
   69     | '#'

   70 r_id_var: ID
   71         | VAR
   72         | GVAR path
   73         | RVAR
   74         | ID '(' rargs ')'
   75         | ID '(' ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 28 37 47
'#' (35) 50 69
'(' (40) 20 21 29 38 41 42 63 74 75
')' (41) 20 21 29 38 41 42 63 74 75
',' (44) 44 65
'.' (46) 4 10
':' (58) 25 31 32 33 60 64
'<' (60) 18 19 47 52 56
'=' (61) 30 45
'>' (62) 18 19 47 52 56
'^' (94) 7 9 16 46 54
'{' (123) 5 11
'|' (124) 6 8 14 40
'}' (125) 5 11
'~' (126) 20 21
error (256) 13
ID (258) 31 35 41 42 47 52 56 70 74 75
VAR (259) 32 34 48 71
GVAR (260) 20 33 51 72
ARROW (262) 12
STRING (263) 27 62 68
RVAR (264) 49 73


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
start (25)
    on left: 1, on right: 0
rules (26)
    on left: 2 3, on right: 1 2
rulegroup (27)
    on left: 4 5, on right: 2 3
groups (28)
    on left: 6 7 8 9, on right: 5 6 7 11
group (29)
    on left: 10 11, on right: 6 7 8 9
rule (30)
    on left: 12 13, on right: 4 10
expr (31)
    on left: 14 15, on right: 5 11 12 14 20 21 29
eterm (32)
    on left: 16 17, on right: 14 15 16
term (33)
    on left: 18 19 20 21 22, on right: 16 17 18 28
feature (34)
    on left: 23 24 25 26 27 28 29 30, on right: 22
nominal (35)
    on left: 31 32 33, on right: 23 24 30
id_lvar (36)
    on left: 34 35, on right: 18 19 26 36
iv_term (37)
    on left: 36 37 38, on right: 24 25 37 39 40
iv_expr (38)
    on left: 39 40, on right: 38 40
funcall (39)
    on left: 41 42, on right: 21
actions (40)
    on left: 43 44, on right: 12 44
action (41)
    on left: 45 46 47, on right: 43 44
lval (42)
    on left: 48 49 50 51, on right: 45 46 47
path (43)
    on left: 52 53, on right: 51 52 72
rexpr (44)
    on left: 54 55, on right: 45 46 54 63
rterm (45)
    on left: 56 57, on right: 54 55 56
rfeat (46)
    on left: 58 59 60 61 62 63, on right: 57
rnominal (47)
    on left: 64, on right: 58 59
rargs (48)
    on left: 65 66, on right: 41 65 74
rarg (49)
    on left: 67 68 69, on right: 65 66
r_id_var (50)
    on left: 70 71 72 73 74 75, on right: 59 60 61 64 67


state 0

    0 $accept: . start $end

    error   shift, and go to state 1
    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 5
    '<'     shift, and go to state 6
    '('     shift, and go to state 7
    ':'     shift, and go to state 8
    '!'     shift, and go to state 9
    '='     shift, and go to state 10

    start      go to state 11
    rules      go to state 12
    rulegroup  go to state 13
    rule       go to state 14
    expr       go to state 15
    eterm      go to state 16
    term       go to state 17
    feature    go to state 18
    nominal    go to state 19
    id_lvar    go to state 20


state 1

   13 rule: error .

    $default  reduce using rule 13 (rule)


state 2

   31 nominal: ID . ':'
   35 id_lvar: ID .

    ':'  shift, and go to state 21

    $default  reduce using rule 35 (id_lvar)


state 3

   32 nominal: VAR . ':'
   34 id_lvar: VAR .

    ':'  shift, and go to state 22

    $default  reduce using rule 34 (id_lvar)


state 4

   33 nominal: GVAR . ':'

    ':'  shift, and go to state 23


state 5

   27 feature: STRING .

    $default  reduce using rule 27 (feature)


state 6

   18 term: '<' . id_lvar '>' term
   19     | '<' . id_lvar '>'

    ID   shift, and go to state 24
    VAR  shift, and go to state 25

    id_lvar  go to state 26


state 7

   20 term: '(' . GVAR '~' expr ')'
   21     | '(' . funcall '~' expr ')'
   29 feature: '(' . expr ')'

    ID      shift, and go to state 27
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 28
    STRING  shift, and go to state 5
    '<'     shift, and go to state 6
    '('     shift, and go to state 7
    ':'     shift, and go to state 8
    '!'     shift, and go to state 9
    '='     shift, and go to state 10

    expr     go to state 29
    eterm    go to state 16
    term     go to state 17
    feature  go to state 18
    nominal  go to state 19
    id_lvar  go to state 20
    funcall  go to state 30


state 8

   25 feature: ':' . iv_term

    ID   shift, and go to state 24
    VAR  shift, and go to state 25
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    id_lvar  go to state 33
    iv_term  go to state 34


state 9

   28 feature: '!' . term

    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 5
    '<'     shift, and go to state 6
    '('     shift, and go to state 7
    ':'     shift, and go to state 8
    '!'     shift, and go to state 9
    '='     shift, and go to state 10

    term     go to state 35
    feature  go to state 18
    nominal  go to state 19
    id_lvar  go to state 20


state 10

   30 feature: '=' . nominal

    ID    shift, and go to state 36
    VAR   shift, and go to state 37
    GVAR  shift, and go to state 4

    nominal  go to state 38


state 11

    0 $accept: start . $end

    $end  shift, and go to state 39


state 12

    1 start: rules .

    $default  reduce using rule 1 (start)


state 13

    2 rules: rulegroup . rules
    3      | rulegroup .

    error   shift, and go to state 1
    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 5
    '<'     shift, and go to state 6
    '('     shift, and go to state 7
    ':'     shift, and go to state 8
    '!'     shift, and go to state 9
    '='     shift, and go to state 10

    $end  reduce using rule 3 (rules)

    rules      go to state 40
    rulegroup  go to state 13
    rule       go to state 14
    expr       go to state 15
    eterm      go to state 16
    term       go to state 17
    feature    go to state 18
    nominal    go to state 19
    id_lvar    go to state 20


state 14

    4 rulegroup: rule . '.'

    '.'  shift, and go to state 41


state 15

    5 rulegroup: expr . '{' groups '}'
   12 rule: expr . ARROW actions
   14 expr: expr . '|' eterm

    ARROW  shift, and go to state 42
    '{'    shift, and go to state 43
    '|'    shift, and go to state 44


state 16

   15 expr: eterm .
   16 eterm: eterm . '^' term

    '^'  shift, and go to state 45

    $default  reduce using rule 15 (expr)


state 17

   17 eterm: term .

    $default  reduce using rule 17 (eterm)


state 18

   22 term: feature .

    $default  reduce using rule 22 (term)


state 19

   23 feature: nominal .
   24        | nominal . iv_term

    ID   shift, and go to state 24
    VAR  shift, and go to state 25
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    $default  reduce using rule 23 (feature)

    id_lvar  go to state 33
    iv_term  go to state 46


state 20

   26 feature: id_lvar .

    $default  reduce using rule 26 (feature)


state 21

   31 nominal: ID ':' .

    $default  reduce using rule 31 (nominal)


state 22

   32 nominal: VAR ':' .

    $default  reduce using rule 32 (nominal)


state 23

   33 nominal: GVAR ':' .

    $default  reduce using rule 33 (nominal)


state 24

   35 id_lvar: ID .

    $default  reduce using rule 35 (id_lvar)


state 25

   34 id_lvar: VAR .

    $default  reduce using rule 34 (id_lvar)


state 26

   18 term: '<' id_lvar . '>' term
   19     | '<' id_lvar . '>'

    '>'  shift, and go to state 47


state 27

   31 nominal: ID . ':'
   35 id_lvar: ID .
   41 funcall: ID . '(' rargs ')'
   42        | ID . '(' ')'

    '('  shift, and go to state 48
    ':'  shift, and go to state 21

    $default  reduce using rule 35 (id_lvar)


state 28

   20 term: '(' GVAR . '~' expr ')'
   33 nominal: GVAR . ':'

    '~'  shift, and go to state 49
    ':'  shift, and go to state 23


state 29

   14 expr: expr . '|' eterm
   29 feature: '(' expr . ')'

    '|'  shift, and go to state 44
    ')'  shift, and go to state 50


state 30

   21 term: '(' funcall . '~' expr ')'

    '~'  shift, and go to state 51


state 31

   38 iv_term: '(' . iv_expr ')'

    ID   shift, and go to state 24
    VAR  shift, and go to state 25
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    id_lvar  go to state 33
    iv_term  go to state 52
    iv_expr  go to state 53


state 32

   37 iv_term: '!' . iv_term

    ID   shift, and go to state 24
    VAR  shift, and go to state 25
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    id_lvar  go to state 33
    iv_term  go to state 54


state 33

   36 iv_term: id_lvar .

    $default  reduce using rule 36 (iv_term)


state 34

   25 feature: ':' iv_term .

    $default  reduce using rule 25 (feature)


state 35

   28 feature: '!' term .

    $default  reduce using rule 28 (feature)


state 36

   31 nominal: ID . ':'

    ':'  shift, and go to state 21


state 37

   32 nominal: VAR . ':'

    ':'  shift, and go to state 22


state 38

   30 feature: '=' nominal .

    $default  reduce using rule 30 (feature)


state 39

    0 $accept: start $end .

    $default  accept


state 40

    2 rules: rulegroup rules .

    $default  reduce using rule 2 (rules)


state 41

    4 rulegroup: rule '.' .

    $default  reduce using rule 4 (rulegroup)


state 42

   12 rule: expr ARROW . actions

    VAR   shift, and go to state 55
    GVAR  shift, and go to state 56
    RVAR  shift, and go to state 57
    '#'   shift, and go to state 58

    actions  go to state 59
    action   go to state 60
    lval     go to state 61


state 43

    5 rulegroup: expr '{' . groups '}'

    '|'  shift, and go to state 62
    '^'  shift, and go to state 63

    groups  go to state 64


state 44

   14 expr: expr '|' . eterm

    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 5
    '<'     shift, and go to state 6
    '('     shift, and go to state 7
    ':'     shift, and go to state 8
    '!'     shift, and go to state 9
    '='     shift, and go to state 10

    eterm    go to state 65
    term     go to state 17
    feature  go to state 18
    nominal  go to state 19
    id_lvar  go to state 20


state 45

   16 eterm: eterm '^' . term

    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 5
    '<'     shift, and go to state 6
    '('     shift, and go to state 7
    ':'     shift, and go to state 8
    '!'     shift, and go to state 9
    '='     shift, and go to state 10

    term     go to state 66
    feature  go to state 18
    nominal  go to state 19
    id_lvar  go to state 20


state 46

   24 feature: nominal iv_term .

    $default  reduce using rule 24 (feature)


state 47

   18 term: '<' id_lvar '>' . term
   19     | '<' id_lvar '>' .

    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 5
    '<'     shift, and go to state 6
    '('     shift, and go to state 7
    ':'     shift, and go to state 8
    '!'     shift, and go to state 9
    '='     shift, and go to state 10

    $default  reduce using rule 19 (term)

    term     go to state 67
    feature  go to state 18
    nominal  go to state 19
    id_lvar  go to state 20


state 48

   41 funcall: ID '(' . rargs ')'
   42        | ID '(' . ')'

    ID      shift, and go to state 68
    VAR     shift, and go to state 69
    GVAR    shift, and go to state 70
    STRING  shift, and go to state 71
    RVAR    shift, and go to state 72
    ')'     shift, and go to state 73
    '#'     shift, and go to state 74

    rargs     go to state 75
    rarg      go to state 76
    r_id_var  go to state 77


state 49

   20 term: '(' GVAR '~' . expr ')'

    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 5
    '<'     shift, and go to state 6
    '('     shift, and go to state 7
    ':'     shift, and go to state 8
    '!'     shift, and go to state 9
    '='     shift, and go to state 10

    expr     go to state 78
    eterm    go to state 16
    term     go to state 17
    feature  go to state 18
    nominal  go to state 19
    id_lvar  go to state 20


state 50

   29 feature: '(' expr ')' .

    $default  reduce using rule 29 (feature)


state 51

   21 term: '(' funcall '~' . expr ')'

    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 5
    '<'     shift, and go to state 6
    '('     shift, and go to state 7
    ':'     shift, and go to state 8
    '!'     shift, and go to state 9
    '='     shift, and go to state 10

    expr     go to state 79
    eterm    go to state 16
    term     go to state 17
    feature  go to state 18
    nominal  go to state 19
    id_lvar  go to state 20


state 52

   39 iv_expr: iv_term .
   40        | iv_term . '|' iv_expr

    '|'  shift, and go to state 80

    $default  reduce using rule 39 (iv_expr)


state 53

   38 iv_term: '(' iv_expr . ')'

    ')'  shift, and go to state 81


state 54

   37 iv_term: '!' iv_term .

    $default  reduce using rule 37 (iv_term)


state 55

   48 lval: VAR .

    $default  reduce using rule 48 (lval)


state 56

   51 lval: GVAR . path

    '<'  shift, and go to state 82

    $default  reduce using rule 53 (path)

    path  go to state 83


state 57

   49 lval: RVAR .

    $default  reduce using rule 49 (lval)


state 58

   50 lval: '#' .

    $default  reduce using rule 50 (lval)


state 59

   12 rule: expr ARROW actions .

    $default  reduce using rule 12 (rule)


state 60

   43 actions: action .
   44        | action . ',' actions

    ','  shift, and go to state 84

    $default  reduce using rule 43 (actions)


state 61

   45 action: lval . '=' rexpr
   46       | lval . '^' rexpr
   47       | lval . '!' '<' ID '>'

    '^'  shift, and go to state 85
    '!'  shift, and go to state 86
    '='  shift, and go to state 87


state 62

    6 groups: '|' . group groups
    8       | '|' . group

    error   shift, and go to state 1
    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 5
    '<'     shift, and go to state 6
    '('     shift, and go to state 7
    ':'     shift, and go to state 8
    '!'     shift, and go to state 9
    '='     shift, and go to state 10

    group    go to state 88
    rule     go to state 89
    expr     go to state 90
    eterm    go to state 16
    term     go to state 17
    feature  go to state 18
    nominal  go to state 19
    id_lvar  go to state 20


state 63

    7 groups: '^' . group groups
    9       | '^' . group

    error   shift, and go to state 1
    ID      shift, and go to state 2
    VAR     shift, and go to state 3
    GVAR    shift, and go to state 4
    STRING  shift, and go to state 5
    '<'     shift, and go to state 6
    '('     shift, and go to state 7
    ':'     shift, and go to state 8
    '!'     shift, and go to state 9
    '='     shift, and go to state 10

    group    go to state 91
    rule     go to state 89
    expr     go to state 90
    eterm    go to state 16
    term     go to state 17
    feature  go to state 18
    nominal  go to state 19
    id_lvar  go to state 20


state 64

    5 rulegroup: expr '{' groups . '}'

    '}'  shift, and go to state 92


state 65

   14 expr: expr '|' eterm .
   16 eterm: eterm . '^' term

    '^'  shift, and go to state 45

    $default  reduce using rule 14 (expr)


state 66

   16 eterm: eterm '^' term .

    $default  reduce using rule 16 (eterm)


state 67

   18 term: '<' id_lvar '>' term .

    $default  reduce using rule 18 (term)


state 68

   70 r_id_var: ID .
   74         | ID . '(' rargs ')'
   75         | ID . '(' ')'

    '('  shift, and go to state 93

    $default  reduce using rule 70 (r_id_var)


state 69

   71 r_id_var: VAR .

    $default  reduce using rule 71 (r_id_var)


state 70

   72 r_id_var: GVAR . path

    '<'  shift, and go to state 82

    $default  reduce using rule 53 (path)

    path  go to state 94


state 71

   68 rarg: STRING .

    $default  reduce using rule 68 (rarg)


state 72

   73 r_id_var: RVAR .

    $default  reduce using rule 73 (r_id_var)


state 73

   42 funcall: ID '(' ')' .

    $default  reduce using rule 42 (funcall)


state 74

   69 rarg: '#' .

    $default  reduce using rule 69 (rarg)


state 75

   41 funcall: ID '(' rargs . ')'

    ')'  shift, and go to state 95


state 76

   65 rargs: rarg . ',' rargs
   66      | rarg .

    ','  shift, and go to state 96

    $default  reduce using rule 66 (rargs)


state 77

   67 rarg: r_id_var .

    $default  reduce using rule 67 (rarg)


state 78

   14 expr: expr . '|' eterm
   20 term: '(' GVAR '~' expr . ')'

    '|'  shift, and go to state 44
    ')'  shift, and go to state 97


state 79

   14 expr: expr . '|' eterm
   21 term: '(' funcall '~' expr . ')'

    '|'  shift, and go to state 44
    ')'  shift, and go to state 98


state 80

   40 iv_expr: iv_term '|' . iv_expr

    ID   shift, and go to state 24
    VAR  shift, and go to state 25
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    id_lvar  go to state 33
    iv_term  go to state 52
    iv_expr  go to state 99


state 81

   38 iv_term: '(' iv_expr ')' .

    $default  reduce using rule 38 (iv_term)


state 82

   52 path: '<' . ID '>' path

    ID  shift, and go to state 100


state 83

   51 lval: GVAR path .

    $default  reduce using rule 51 (lval)


state 84

   44 actions: action ',' . actions

    VAR   shift, and go to state 55
    GVAR  shift, and go to state 56
    RVAR  shift, and go to state 57
    '#'   shift, and go to state 58

    actions  go to state 101
    action   go to state 60
    lval     go to state 61


state 85

   46 action: lval '^' . rexpr

    ID      shift, and go to state 68
    VAR     shift, and go to state 69
    GVAR    shift, and go to state 70
    STRING  shift, and go to state 102
    RVAR    shift, and go to state 72
    '<'     shift, and go to state 103
    '('     shift, and go to state 104
    ':'     shift, and go to state 105

    rexpr     go to state 106
    rterm     go to state 107
    rfeat     go to state 108
    rnominal  go to state 109
    r_id_var  go to state 110


state 86

   47 action: lval '!' . '<' ID '>'

    '<'  shift, and go to state 111


state 87

   45 action: lval '=' . rexpr

    ID      shift, and go to state 68
    VAR     shift, and go to state 69
    GVAR    shift, and go to state 70
    STRING  shift, and go to state 102
    RVAR    shift, and go to state 72
    '<'     shift, and go to state 103
    '('     shift, and go to state 104
    ':'     shift, and go to state 105

    rexpr     go to state 112
    rterm     go to state 107
    rfeat     go to state 108
    rnominal  go to state 109
    r_id_var  go to state 110


state 88

    6 groups: '|' group . groups
    8       | '|' group .

    '|'  shift, and go to state 62
    '^'  shift, and go to state 63

    $default  reduce using rule 8 (groups)

    groups  go to state 113


state 89

   10 group: rule . '.'

    '.'  shift, and go to state 114


state 90

   11 group: expr . '{' groups '}'
   12 rule: expr . ARROW actions
   14 expr: expr . '|' eterm

    ARROW  shift, and go to state 42
    '{'    shift, and go to state 115
    '|'    shift, and go to state 44


state 91

    7 groups: '^' group . groups
    9       | '^' group .

    '|'  shift, and go to state 62
    '^'  shift, and go to state 63

    $default  reduce using rule 9 (groups)

    groups  go to state 116


state 92

    5 rulegroup: expr '{' groups '}' .

    $default  reduce using rule 5 (rulegroup)


state 93

   74 r_id_var: ID '(' . rargs ')'
   75         | ID '(' . ')'

    ID      shift, and go to state 68
    VAR     shift, and go to state 69
    GVAR    shift, and go to state 70
    STRING  shift, and go to state 71
    RVAR    shift, and go to state 72
    ')'     shift, and go to state 117
    '#'     shift, and go to state 74

    rargs     go to state 118
    rarg      go to state 76
    r_id_var  go to state 77


state 94

   72 r_id_var: GVAR path .

    $default  reduce using rule 72 (r_id_var)


state 95

   41 funcall: ID '(' rargs ')' .

    $default  reduce using rule 41 (funcall)


state 96

   65 rargs: rarg ',' . rargs

    ID      shift, and go to state 68
    VAR     shift, and go to state 69
    GVAR    shift, and go to state 70
    STRING  shift, and go to state 71
    RVAR    shift, and go to state 72
    '#'     shift, and go to state 74

    rargs     go to state 119
    rarg      go to state 76
    r_id_var  go to state 77


state 97

   20 term: '(' GVAR '~' expr ')' .

    $default  reduce using rule 20 (term)


state 98

   21 term: '(' funcall '~' expr ')' .

    $default  reduce using rule 21 (term)


state 99

   40 iv_expr: iv_term '|' iv_expr .

    $default  reduce using rule 40 (iv_expr)


state 100

   52 path: '<' ID . '>' path

    '>'  shift, and go to state 120


state 101

   44 actions: action ',' actions .

    $default  reduce using rule 44 (actions)


state 102

   62 rfeat: STRING .

    $default  reduce using rule 62 (rfeat)


state 103

   56 rterm: '<' . ID '>' rterm

    ID  shift, and go to state 121


state 104

   63 rfeat: '(' . rexpr ')'

    ID      shift, and go to state 68
    VAR     shift, and go to state 69
    GVAR    shift, and go to state 70
    STRING  shift, and go to state 102
    RVAR    shift, and go to state 72
    '<'     shift, and go to state 103
    '('     shift, and go to state 104
    ':'     shift, and go to state 105

    rexpr     go to state 122
    rterm     go to state 107
    rfeat     go to state 108
    rnominal  go to state 109
    r_id_var  go to state 110


state 105

   60 rfeat: ':' . r_id_var

    ID    shift, and go to state 68
    VAR   shift, and go to state 69
    GVAR  shift, and go to state 70
    RVAR  shift, and go to state 72

    r_id_var  go to state 123


state 106

   46 action: lval '^' rexpr .
   54 rexpr: rexpr . '^' rterm

    '^'  shift, and go to state 124

    $default  reduce using rule 46 (action)


state 107

   55 rexpr: rterm .

    $default  reduce using rule 55 (rexpr)


state 108

   57 rterm: rfeat .

    $default  reduce using rule 57 (rterm)


state 109

   58 rfeat: rnominal .
   59      | rnominal . r_id_var

    ID    shift, and go to state 68
    VAR   shift, and go to state 69
    GVAR  shift, and go to state 70
    RVAR  shift, and go to state 72

    $default  reduce using rule 58 (rfeat)

    r_id_var  go to state 125


state 110

   61 rfeat: r_id_var .
   64 rnominal: r_id_var . ':'

    ':'  shift, and go to state 126

    $default  reduce using rule 61 (rfeat)


state 111

   47 action: lval '!' '<' . ID '>'

    ID  shift, and go to state 127


state 112

   45 action: lval '=' rexpr .
   54 rexpr: rexpr . '^' rterm

    '^'  shift, and go to state 124

    $default  reduce using rule 45 (action)


state 113

    6 groups: '|' group groups .

    $default  reduce using rule 6 (groups)


state 114

   10 group: rule '.' .

    $default  reduce using rule 10 (group)


state 115

   11 group: expr '{' . groups '}'

    '|'  shift, and go to state 62
    '^'  shift, and go to state 63

    groups  go to state 128


state 116

    7 groups: '^' group groups .

    $default  reduce using rule 7 (groups)


state 117

   75 r_id_var: ID '(' ')' .

    $default  reduce using rule 75 (r_id_var)


state 118

   74 r_id_var: ID '(' rargs . ')'

    ')'  shift, and go to state 129


state 119

   65 rargs: rarg ',' rargs .

    $default  reduce using rule 65 (rargs)


state 120

   52 path: '<' ID '>' . path

    '<'  shift, and go to state 82

    $default  reduce using rule 53 (path)

    path  go to state 130


state 121

   56 rterm: '<' ID . '>' rterm

    '>'  shift, and go to state 131


state 122

   54 rexpr: rexpr . '^' rterm
   63 rfeat: '(' rexpr . ')'

    '^'  shift, and go to state 124
    ')'  shift, and go to state 132


state 123

   60 rfeat: ':' r_id_var .

    $default  reduce using rule 60 (rfeat)


state 124

   54 rexpr: rexpr '^' . rterm

    ID      shift, and go to state 68
    VAR     shift, and go to state 69
    GVAR    shift, and go to state 70
    STRING  shift, and go to state 102
    RVAR    shift, and go to state 72
    '<'     shift, and go to state 103
    '('     shift, and go to state 104
    ':'     shift, and go to state 105

    rterm     go to state 133
    rfeat     go to state 108
    rnominal  go to state 109
    r_id_var  go to state 110


state 125

   59 rfeat: rnominal r_id_var .

    $default  reduce using rule 59 (rfeat)


state 126

   64 rnominal: r_id_var ':' .

    $default  reduce using rule 64 (rnominal)


state 127

   47 action: lval '!' '<' ID . '>'

    '>'  shift, and go to state 134


state 128

   11 group: expr '{' groups . '}'

    '}'  shift, and go to state 135


state 129

   74 r_id_var: ID '(' rargs ')' .

    $default  reduce using rule 74 (r_id_var)


state 130

   52 path: '<' ID '>' path .

    $default  reduce using rule 52 (path)


state 131

   56 rterm: '<' ID '>' . rterm

    ID      shift, and go to state 68
    VAR     shift, and go to state 69
    GVAR    shift, and go to state 70
    STRING  shift, and go to state 102
    RVAR    shift, and go to state 72
    '<'     shift, and go to state 103
    '('     shift, and go to state 104
    ':'     shift, and go to state 105

    rterm     go to state 136
    rfeat     go to state 108
    rnominal  go to state 109
    r_id_var  go to state 110


state 132

   63 rfeat: '(' rexpr ')' .

    $default  reduce using rule 63 (rfeat)


state 133

   54 rexpr: rexpr '^' rterm .

    $default  reduce using rule 54 (rexpr)


state 134

   47 action: lval '!' '<' ID '>' .

    $default  reduce using rule 47 (action)


state 135

   11 group: expr '{' groups '}' .

    $default  reduce using rule 11 (group)


state 136

   56 rterm: '<' ID '>' rterm .

    $default  reduce using rule 56 (rterm)
